fix scroll on iOS

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,8 @@
   align-items: stretch;
   justify-content: space-between;
   height: 100dvh;
+  width: 100dvw;
+  position: absolute;
 }
 
 /*Footer*/
